--- a/duck_order_system/frontend/package.json
+++ b/duck_order_system/frontend/package.json
@@ -13,10 +13,16 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "add": "^2.0.6",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "source-map": "^0.7.3",
     "styled-components": "^5.3.3",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
